diagnostics/syntax_errors.txt
Sorry: IndentationError: unexpected indent (regression_plots.py, line 156)Sorry: IndentationError: unexpected indent (regression_metrics.py, line 377)Sorry: IndentationError: unexpected indent (classification_metrics.py, line 406)  File "./src/models/typing.py", line 154
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
  File "./tests/conftest.py", line 160
    EOFpython -m py_compile tests/conftest.py
                 ^^^^^^^^^^
SyntaxError: invalid syntax
Sorry: IndentationError: unexpected indent (regression_plots.py, line 156)Sorry: IndentationError: unexpected indent (regression_metrics.py, line 377)Sorry: IndentationError: unexpected indent (classification_metrics.py, line 406)  File "./src/models/typing.py", line 154
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
  File "./tests/conftest.py", line 160
    EOFpython -m py_compile tests/conftest.py
                 ^^^^^^^^^^
SyntaxError: invalid syntax
Sorry: IndentationError: unexpected indent (regression_plots.py, line 156)Sorry: IndentationError: unexpected indent (regression_metrics.py, line 377)Sorry: IndentationError: unexpected indent (classification_metrics.py, line 406)  File "./src/models/typing.py", line 154
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
  File "./tests/conftest.py", line 160
    EOFpython -m py_compile tests/conftest.py
                 ^^^^^^^^^^
SyntaxError: invalid syntax
